# witas

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
lib/: CMakeLists.txt
lib/src/: dummy.cpp
lib/src/audio_basics/: audio_data.h  sound_handle.h
lib/src/core/: audio_engine.cpp  audio_engine.h
lib/src/format/: endian_converter.h  four_cc.h  load_wav.cpp  load_wav.h
lib/src/public/: wit.h
lib/src/utils/: ring_buffer.h
test/: CMakeLists.txt  test_audio_data.cpp  test_audio_engine.cpp  test_audio_thread_pipe.cpp  test_connectivity.cpp  test_miniaudio_link.cpp
test/test_audio_engine/: CMakeLists.txt  test_audio_engine.cpp  test_audio_engine_float.cpp
